--- a/docs/eq/constraints.org
+++ b/docs/eq/constraints.org
@@ -9,7 +9,7 @@
   \end{equation}
   \begin{equation}
       \label{seq:c1}
-      v_i - v_j - (\psi_{ij} - 1)Q \ge 0
+      v_i - v_j - 1 - (\psi_{ij} - 1)Q \ge 0
   \end{equation}
   \begin{equation}
       \label{seq:c2}
@@ -29,42 +29,50 @@
   \end{equation}
   \begin{equation}
       \label{seq:c6}
-       \eta_{\xi_i} = \eta_i + r_{v_i}(d_i - u_i) - \Delta_i
+      s_i = d_i - u_i
   \end{equation}
   \begin{equation}
       \label{seq:c7}
-      \kappa_i \geq \eta_i + r_{v_i}(d_i - u_i)
+       \eta_{\xi_i} = \eta_{\Xi_i} + r_{v_i}s_i - \Delta_i
   \end{equation}
   \begin{equation}
       \label{seq:c8}
-      \eta_i - m\kappa_{b_i} \le T (1 - \phi_{i})
+       \eta_{\Xi_I} + r_{v_i}s_i \Delta_i \ge \nu \kappa_{\Xi_i}
   \end{equation}
   \begin{equation}
       \label{seq:c9}
-      m_{k_i} - m\kappa_{b_i} < T \phi_{i}
+      \kappa_{\Xi_i} \geq \eta_{\Xi_i} + r_{v_i}s_i
   \end{equation}
   \begin{equation}
       \label{seq:c10}
-      a_i \leq u_i \leq d_i \le e_i \le T
+      \eta_{\Xi_i} - m\kappa_{b_i} \le T (1 - \phi_{i})
   \end{equation}
   \begin{equation}
       \label{seq:c11}
-      u_i - dt_h \le T\theta_h
+      m_{k_i} - m\kappa_{b_i} < T \phi_{i}
   \end{equation}
   \begin{equation}
       \label{seq:c12}
-      dt_h - u_i \le T(1 - \theta_h)
+      a_i \leq u_i \leq d_i \le e_i \le T
   \end{equation}
   \begin{equation}
       \label{seq:c13}
-      dt_h - d_i \le T\mu_h
+      u_i - dt_h \le T\theta_h
   \end{equation}
   \begin{equation}
       \label{seq:c14}
-      d_i - dt_h \le T(1 - \mu_h)
+      dt_h - u_i \le T(1 - \theta_h)
   \end{equation}
   \begin{equation}
       \label{seq:c15}
+      dt_h - d_i \le T\mu_h
+  \end{equation}
+  \begin{equation}
+      \label{seq:c16}
+      d_i - dt_h \le T(1 - \mu_h)
+  \end{equation}
+  \begin{equation}
+      \label{seq:c17}
       \iota_h = \mu_h \theta_h
   \end{equation}
 \end{subequations}
