--- a/README.org
+++ b/README.org
@@ -2,7 +2,21 @@
 #+author: Alexander Brown
 #+date: \today
 
-#+include:
+* Introduction
+:PROPERTIES:
+:CUSTOM_ID: sec:introduction
+:END:
+
+This document outlines a Simulated Annealing (SA) approach to the bus charging scheduling problem that utilizes Mixed
+Integer Linear Programming (MILP) constraints to determine feasible charging schedules. The problem involves generating
+an optimal charging schedule for a fleet of Battery Electric Buses (BEBs) based on a set of routes and a mix of fast and
+slow chargers. The aim is to minimize both the consumption cost (amount of electricity used over a certain time) and the
+demand cost (rate at which electricity is being used) while ensuring that the buses maintain sufficient charge to
+complete their workday without delays.
+
+The SA algorithm is introduced and constrained by a set of MILP constraints derived from the Position Allocation Problem
+(PAP) to ensure the validity of proposed charging schedules. Objective functions describing consumption cost and demand
+cost are used to minimize power consumption and total cost of using the BEBs.* Requirements
 
 * Requirements
 ** Program
